# QuickTransform

./: .gitignore  Cargo.toml  LICENSE  QUICKCRYPT_PROPOSAL.md  README.md  build.rs
assets/: quicktransform.desktop
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/: gui_main.rs  lib.rs  main.rs
src/transforms/: encode.rs  generate.rs  hash.rs  mod.rs
